Add appendix section on random number generation

--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,12 @@ ol {
 li {
   margin-bottom: auto;
 }
+
+footer {
+  text-align: center;
+  margin: 4rem 0 2rem;
+}
+
+footer>* {
+  margin: 2rem;
+}
