--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,11 @@
   margin: 1rem 0;
 }
 
-.button-group>* {
+.button-group > * {
   margin-right: 1rem;
 }
 
-.button-group>*:first-child {
+.button-group > *:first-child {
   /* margin-left: 1rem; */
 }
 
@@ -30,7 +30,7 @@ button.button:active {
 button.button:hover {
   background-color: var(--main-color);
   border-color: var(--main-color);
-  filter: brightness(0.95)
+  filter: brightness(0.95);
 }
 
 button.button.button-outline {
@@ -40,7 +40,7 @@ button.button.button-outline {
 button.button.button-outline:hover {
   color: var(--main-color);
   border-color: var(--main-color);
-  filter: brightness(0.9)
+  filter: brightness(0.9);
 }
 
 textarea {
@@ -53,7 +53,7 @@ textarea:focus {
 }
 
 a {
-  color: var(--main-color)
+  color: var(--main-color);
 }
 
 ol {
@@ -67,14 +67,20 @@ li {
 footer {
   text-align: center;
   margin: 4rem 0 2rem;
+  font-style: italic;
 }
 
-footer>* {
+footer > * {
   display: inline;
 }
 
-footer>*:not(:first-child) {
+footer > *:not(:first-child) {
   margin-left: 3rem;
   padding-left: 3rem;
   border-left: 1px solid hsl(207.3, 10.3%, 80%);
+}
+
+#icon {
+  text-align: center;
+  margin-bottom: 1rem;
 }
