Fix ui inconsistency

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,8 @@ button.button {
   font-weight: 600;
 }
 
-button.button:active {
+button.button:active,
+button.button:focus {
   background-color: var(--main-color);
   border-color: var(--main-color);
   filter: brightness(0.85);
